# dingo_dango

./: .gitignore  dango-dingo.code-workspace  dingo_dango.code-workspace  roadmap.md
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/dango_ki/api/: __init__.py  endpoints.py
backend/dango_ki/core/: caching.py
backend/dango_ki/utils/: config.py
backend/tests/core/: test_caching.py
docs/: architecture.md  changelog.md  contributing.md  copilot-instructions.md  readme.md  testing_strategy.md  user_manual.md
docs/adr/: 001-wahl-des-frontend-frameworks.md  002-wahl-der-datenbank-architektur.md  003-backend-als-api-sidecar.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src-tauri/: tauri.conf.json
