[tool.black]

line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "B", "A", "C4", "DTZ", "PIE", "PT", "Q", "RET", "SIM", "T20", "TID", "TRY", "YTT"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
